  '/'.  (Neil Martinsen-Burrell, #495263)

* ``bzr unshelve`` has improved messages about what it is doing.
  (Neil Martinsen-Burrell, #496917)

* Check for SIGINT (Ctrl-C) and other signals immediately if ``readdir``
  returns ``EINTR`` by calling ``PyErr_CheckSignals``.  This affected the
  optional ``_readdir_pyx`` extension.  (Andrew Bennetts, #495023)

* Give a clearer message if the lockdir disappears after being apparently
  successfully taken.  (Martin Pool, #498378)

* Listen to the SIGWINCH signal to update the terminal width.
  (Vincent Ladeuil, #316357)

* The 2a format wasn't properly restarting autopacks when something
  changed underneath it (like another autopack). Now concurrent
  autopackers will properly succeed. (John Arbash Meinel, #495000)

Improvements
************

* Push will now inform the user when they are trying to push to a foreign 
  VCS for which roundtripping is not supported, and will suggest them to 
  use dpush. (Jelmer Vernooij)

* Transport network activity indicator is shown more of the time when
  Bazaar is doing network IO.
  (Martin Pool)

Documentation
*************

* There is a System Administrator's Guide in ``doc/en/admin-guide``,
  including discussions of installation, relevant plugins, security and 
  backup.

API Changes
***********

* Many test features were renamed from ``FooFeature`` to ``foo_feature``
  to be consistent with instances being lower case and classes being
  CamelCase. For the features that were more likely to be used, we added a
  deprecation thunk, but not all. (John Arbash Meinel)

* ``WorkingTree.update`` implementations must now accept a ``revision``
  parameter.

Internals
*********

* New helper osutils.UnicodeOrBytesToBytesWriter which encodes unicode
  objects but passes str objects straight through. This is used for
  selftest but may be useful for diff and other operations that generate
  mixed output. (Robert Collins)
