@@ -213,6 +213,8 @@ class ftp_server(medusa.ftp_server.ftp_server):
 class FTPTestServer(transport.Server):
     """Common code for FTP server facilities."""
 
+    _no_unicode_support = True
+
     def __init__(self):
         self._root = None
         self._ftp_server = None
