@@ -1497,6 +1497,10 @@ class TransportTests(TestTransportImplementation):
                  u'\u65e5', # Kanji person
                 ]
 
+        no_unicode_support = getattr(self._server, '_no_unicode_support', False)
+        if no_unicode_support:
+            raise TestSkipped("test server cannot handle unicode paths")
+
         try:
             self.build_tree(files, transport=t, line_endings='binary')
         except UnicodeError:
